--- a/frontend/src/app/components/template/footer/footer.component.html
+++ b/frontend/src/app/components/template/footer/footer.component.html
@@ -5,6 +5,7 @@
   href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
 <footer>
+
   <div class="main-content">
     <div class="left box">
       <h2>Sobre nós</h2>
@@ -55,11 +56,11 @@
         <form action="#">
           <div class="email">
             <div class="text">Email *</div>
-            <input type="email" required />
+            <input type="email" required id="email" autocomplete="email"/>
           </div>
           <div class="msg">
             <div class="text">Mensagem *</div>
-            <input rows="2" cols="25" required />
+            <input rows="2" cols="25" required id="Mensagem"/>
           </div>
           <div class="btn">
             <button type="submit">Enviar</button>
