--- a/frontend/src/app/components/views/categoria/categoria.component.html
+++ b/frontend/src/app/components/views/categoria/categoria.component.html
@@ -1,13 +1,12 @@
-<app-header></app-header>
 <main>
   <app-category></app-category>
   <app-carrinho-compras></app-carrinho-compras>
 
-  <span class="fundoCategoria"></span>
+  <span class="fundoCategoria">CATEGORIAS</span>
 
   <div class="todosProdutos" id="single">
     <div class="produto-single" *ngFor="let produto of produtos">
-      <a [routerLink]="['/produtos', this.produto.id_produto]">
+      <a [routerLink]="['/produtos', produto.categoria]">
         <div class="produto-img">
           <img class="img" [attr.src]="'http://localhost:3000/' + produto.produto_imagem" alt="img" />
         </div>
@@ -17,15 +16,14 @@
         <div class="produto-preco">{{ produto.preco | currency : "BRL" }}</div>
         <span class="produto-quantidade">Estoque: {{ produto.quantidade }}</span>
       </a>
-      <button class="material-symbols-outlined" id="produto-adicionar"
-        (click)="adicionarAoCarrinho(produto['id_produto'])"> add_circle </button>
+      <button class="material-symbols-outlined" id="produto-adicionar" (click)="adicionarAoCarrinho(produto['id_produto'])"> add_circle </button>
     </div>
   </div>
 
   <span class="QuantprodutosLoja2">
 
-    <span class="prod">{{ getQuantidade() + " Produtos" }}</span>
     <span class="porPagina">Por Pagina: </span>
+
     <select name="itensPagina" id="itensPagina">
       <option value="p1" selected>16</option>
       <option value="p2">32</option>
@@ -45,4 +43,3 @@
   </span>
 </main>
 <app-footer></app-footer>
-
