--- a/frontend/src/app/components/template/header/header.component.html
+++ b/frontend/src/app/components/template/header/header.component.html
@@ -1,32 +1,31 @@
 <header>
-  <span class="menuAtivo" [ngStyle]="{ 'z-index': this.zindexMenuAtivo }"></span>
-  <span class="menuInativo" [ngStyle]="{ 'z-index': this.zindexMenuInativo }"></span>
   <span class="atalhosFundo" [ngStyle]="{ 'width': this.width5 + '%' , 'z-index': this.zindex }"></span>
-
-  <div class="menu2">
-    <div class="line1" [ngStyle]="{ 'top': this.top1 + 'px' , 'transition': transition + 's' , 'transform': transform1 , 'width': width1 + 'px'}"></div>
-    <div class="line2" [ngStyle]="{ 'display': this.display , 'transition': transition + 's' }"></div>
-    <div class="line3" [ngStyle]="{ 'top': this.top3 + 'px' , 'transition': transition + 's' , 'transform': transform3 , 'width': width3 + 'px'}"></div>
-  </div>
-
-  <a class="logo" [routerLink]="['/home']">
-    <div class="logo">
+  <div class="head">
+    <div class="menu2">
+      <span class="menuAtivo" [ngStyle]="{ 'z-index': this.zindexMenuAtivo }"></span>
+      <span class="menuInativo" [ngStyle]="{ 'z-index': this.zindexMenuInativo }"></span>
+      <div class="line1"
+        [ngStyle]="{ 'top': this.top1 + 'px' , 'transition': transition + 's' , 'transform': transform1 , 'width': width1 + 'px'}">
+      </div>
+      <div class="line2" [ngStyle]="{ 'display': this.display , 'transition': transition + 's' }"></div>
+      <div class="line3"
+        [ngStyle]="{ 'top': this.top3 + 'px' , 'transition': transition + 's' , 'transform': transform3 , 'width': width3 + 'px'}">
+      </div>
+    </div>
+    <span class="logo" [routerLink]="['/home']">
       <img src="assets/img/LogoFundo.png" alt="Ello Cell" id="LogoFundo" />
       <img src="assets/img/logoRaio.png" alt="Raio" id="Raio" />
-    </div>
-  </a>
-
-  <span class="boxPesquisa">
-    <input type="text" class="pesquisa" id="busca" placeholder="Digite o nome do produto">
-    <span class="material-symbols-outlined" id="lupas">search</span>
-  </span>
-
-  <a class="login" [routerLink]="['/login']">
-    <span class="material-symbols-outlined" id="login">person</span>
-  </a>
-
-  <a class="carrinho">
-    <div class="qItens">{{obterTotalItens()}}</div>
-    <span class="material-symbols-outlined" id="carrinho">shopping_cart_checkout</span>
-  </a>
+    </span>
+    <span class="boxPesquisa">
+      <input type="text" class="pesquisa" id="busca" placeholder="Digite o nome do produto">
+      <span class="material-symbols-outlined" id="lupas">search</span>
+    </span>
+    <span class="login" [routerLink]="['/login']">
+      <span class="material-symbols-outlined" id="login">person</span>
+    </span>
+    <span class="carrinho">
+      <div class="qItens">{{obterTotalItens()}}</div>
+      <span class="material-symbols-outlined" id="carrinho">shopping_cart_checkout</span>
+    </span>
+  </div>
 </header>
