--- a/frontend/src/app/components/views/category/category.component.css
+++ b/frontend/src/app/components/views/category/category.component.css
@@ -1,5 +1,6 @@
-.atalhos {
+.categorias {
   position: fixed;
+  width: 0;
   padding: 0;
   margin: 0;
   background-color: #ffffff;
@@ -11,7 +12,7 @@
   border-right: solid 1px rgb(0, 115, 255);
 }
 
-.categorias {
+.infoCategoria {
   position: relative;
   top: 10px;
   padding: 15px;
