--- a/frontend/src/app/components/template/header/header.component.html
+++ b/frontend/src/app/components/template/header/header.component.html
@@ -1,4 +1,5 @@
 <header>
+
   <span class="atalhosFundo" [ngStyle]="{ 'width': this.width5 + '%' , 'z-index': this.zindex }"></span>
   <div class="head">
     <div class="menu2">
@@ -13,8 +14,8 @@
       </div>
     </div>
     <span class="logo" [routerLink]="['/home']">
-      <img src="assets/img/LogoFundo.png" alt="Ello Cell" id="LogoFundo" />
-      <img src="assets/img/logoRaio.png" alt="Raio" id="Raio" />
+      <img src="../assets/img/LogoFundo.png" alt="Ello Cell" id="LogoFundo" />
+      <img src="../assets/img/logoRaio.png" alt="Raio" id="Raio" />
     </span>
     <span class="boxPesquisa">
       <input type="text" class="pesquisa" id="busca" placeholder="Digite o nome do produto">
